[package]
name = "video-encoding-wrapper"
version = "0.1.0"
edition = "2024"
description = "Opinionated tool to encode videos"
repository = "https://github.com/aexoden/video-encoding-wrapper"
license = "MIT OR Apache-2.0"
keywords = ["video"]
categories = ["command-line-utilities", "multimedia::video"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "=1.0.102", features = ["backtrace"] }
av-decoders = { version = "=0.9.1", features = ["ffmpeg"] }
av-metrics = "=0.9.1"
av-scenechange = { version = "=0.23.0", default-features = false, features = [
  "ffmpeg"
] }
base16ct = { version = "=1.0.0", features = ["alloc"] }
cached = "=0.59.0"
clap = { version = "=4.5.49", features = ["derive"] }
crossbeam-queue = "=0.3.12"
ffmpeg = { package = "ffmpeg-the-third", version = "=4.1.0", features = [
  "serialize"
] }
indicatif = "=0.18.4"
plotters = { version = "=0.3.7", default-features = false, features = [
  "line_series",
  "svg_backend"
] }
prettytable-rs = "=0.10.0"
rayon = "=1.11.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"
sha2 = "=0.11.0"
ssimulacra2 = { version = "=0.5.1", default-features = false }
statrs = "=0.18.0"
tokio = { version = "=1.48.0", features = ["process"] }
tracing = "=0.1.41"
tracing-error = "=0.2.1"
tracing-subscriber = { version = "=0.3.20", features = ["env-filter"] }
unit-prefix = "=0.5.2"
v_frame = "=0.5.1"
y4m = "=0.8.0"
yuvxyb = "=0.5.0"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
expect_used = "warn"
missing_errors_doc = "allow"
multiple_crate_versions = "allow"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"

[lints.rust]
future_incompatible = { level = "warn", priority = -1 }
let_underscore = { level = "warn", priority = -1 }

[profile.dev]
opt-level = 3
incremental = true

[profile.release]
lto = "fat"
